K8S Advanced/10/1.3/zipkin-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: istio-system
  name: zipkin-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: zipkin-istio.kubernets.cn
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: zipkin
              port:
                number: 9411
          path: /
